--- a/uitzendkracht/english.html
+++ b/uitzendkracht/english.html
@@ -15,7 +15,7 @@
 <div class="gridcontainer">
 
 <div class="talen">
-<a href="./uitzendkracht.html">Nederlands</a>
+<a href="./index.html">Nederlands</a>
 <a href="./koerdisch.html">Kurdish</a>
 <a href="./arabic.html">Arabic</a>
 <a href="./turks.html">Turkce</a>
