--- a/english.html
+++ b/english.html
@@ -5,10 +5,6 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
  <title>Home</title>
  <link rel="stylesheet" href="./uitzendkracht.css">
- <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,400;0,500;0,700;1,400;1,600&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
- <script src="https://kit.fontawesome.com/3273d83517.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -16,12 +12,12 @@
 
 <div class="talen">
 <a href="./index.html">Nederlands</a>
-<a href="./koerdisch.html">Kurdish</a>
+<a href="./kurdish.html">Kurdish</a>
 <a href="./arabic.html">Arabic</a>
 <a href="./turks.html">Turkce</a>
 <a href="./farsi.html">Farsi</a>
 <a href="./frans.html">Fran&ccedilais</a>
-<a href="./swahili.html">Swahili</a>
+
 
 </div>
 
@@ -49,9 +45,9 @@ Report it! You have rights. Don't let people walk over you, together we stand st
 
 <div class="knoppen">
 <p>
-<a href="https://discriminatie.nl/" target="_blank">Report discrimination</a>
+<a href="https://discriminatie.nl/" target="_blank">Report to discriminatie.nl</a>
 
-<a href="https://www.nlarbeidsinspectie.nl/onderwerpen/melden/oneerlijk-onveilig-ongezond-werk-of-arbeidsuitbuiting-melden" target="_blank">Report dangerous and discriminating situations</a>
+<a href="https://www.nlarbeidsinspectie.nl/onderwerpen/melden/oneerlijk-onveilig-ongezond-werk-of-arbeidsuitbuiting-melden" target="_blank">Report to the labor inspectorate </a>
 </p>
 </div>
 
@@ -59,7 +55,7 @@ Report it! You have rights. Don't let people walk over you, together we stand st
 
 <div class="hulp">
 <p>
-Do you want to report injustice and discrimination, but is Dutch too hard, send us an <a href="mailto:helpmetmeldenuitzendkracht@gmail.com">e-mail</a> . We will see if we can help you report it.
+Do you want to report injustice and discrimination, but is Dutch too hard, send us an <a href="mailto:helpmetmeldenuitzendkracht@gmail.com">e-mail</a>. We will see if we can help you report it.
 </p>   
 </div>
 
