--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
  <title>Home</title>
  <link rel="stylesheet" href="./uitzendkracht.css">
- <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,400;0,500;0,700;1,400;1,600&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
- <script src="https://kit.fontawesome.com/3273d83517.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -16,12 +12,11 @@
 
 <div class="talen">
 <a href="./english.html">English</a>
-<a href="./koerdisch.html">Kurdish</a>
+<a href="./kurdish.html">Kurdish</a>
 <a href="./arabic.html">Arabic</a>
 <a href="./turks.html">Turkce</a>
 <a href="./farsi.html">Farsi</a>
-<a href="./frans.html">Fran&ccedilais</a>
-<a href="./swahili.html">Swahili</a>
+<a href="./frans.html">Fran&ccedil;ais</a>
 
 </div>
 
