--- a/turks.html
+++ b/turks.html
@@ -12,7 +12,7 @@
 
 <div class="talen">
 <a href="./english.html">English</a>
-<a href="./koerdisch.html">Kurdish</a>
+<a href="./kurdisch.html">Kurdish</a>
 <a href="./arabic.html">Arabic</a>
 <a href="./index.html">Nederlands</a>
 <a href="./farsi.html">Farsi</a>
