--- a/arabic.html
+++ b/arabic.html
@@ -67,7 +67,7 @@
 </div>
 
 <p class="nawoord">
-    هذا الموقع هو مبادرة من عدد من المواطنين المعنيين. كل شيء على أساس طوعي.
+.هذا الموقع هو مبادرة من عدد من المواطنين المعنيين. كل شيء على أساس طوعي
 </p>
 
 </div>
