--- a/arabic.html
+++ b/arabic.html
@@ -28,7 +28,7 @@
 
 
 
-<div class = "subtitel">
+<div dir="rtl" class = "subtitel">
 
 <h2 id="ondertitel3">التمییز</h2>
 <h2 id="ondertitel2">في مقابل </h2>
