--- a/arabic.html
+++ b/arabic.html
@@ -30,7 +30,7 @@
 
 <div class = "subtitel">
 <h2 id="ondertitel">قل </h2>
-<h2 id="ondertitel1">!لا </h2>
+<h2 id="ondertitel1">لا!</h2>
 <h2 id="ondertitel2">في مقابل </h2>
 <h2 id="ondertitel3">التمییز</h2>
 
